Bug 789239 - Unravel 30-line if condition in Parser.cpp. Part 1 - Move the condition into a helper function. r=Waldo.